--- a/compiler/package.json
+++ b/compiler/package.json
@@ -41,6 +41,7 @@
     "deccjsunit": "^1.0.8",
     "hypium": "^1.0.0",
     "ignore-loader": "^0.1.2",
+    "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "md5": "^2.3.0",
     "ts-loader": "^8.0.12",
