--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -654,22 +654,22 @@
           {
             "name": "GridRow",
             "type": "GridRowAttribute",
-            "instance": "GridRowInterface"
+            "instance": "GridRowInstance"
           },
           {
             "name": "GridCol",
             "type": "GridColAttribute",
-            "instance": "GridColInterface"
+            "instance": "GridColInstance"
           },
           {
             "name": "WaterFlow",
             "type": "WaterFlowAttribute",
-            "instance": "WaterFlowInterface"
+            "instance": "WaterFlowInstance"
           },
           {
             "name": "FlowItem",
             "type": "FlowItemAttribute",
-            "instance": "FlowItemInterface"
+            "instance": "FlowItemInstance"
           }
         ]
       },
